ponctuation issue on small device fixed

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -55,6 +55,11 @@ html {
     #logo{
         width: 300px;
     }
+
+    .margin-fix{
+        margin-right: 10%;
+        margin-left: 10%;
+    }
 }
 
 // For smartphone landscape
